tests/errors/opening_paren.out
cli:4:5: error: Unexpected token when parsing s-expression
    )
    ^
1 error generated.
